crates/planarc/src/lowering/snapshots/planarc__lowering__type_decl__tests__fold_in_refinement.snap
---
source: crates/planarc/src/lowering/type_decl.rs
expression: ast
---
TypeDeclaration {
    vis: Private,
    attributes: [],
    name: "UserID" @ Span { start: 5, end: 11, line: 1, col: 6, line_end: 0, col_end: 11 },
    definition: TypeDefinition {
        base_type: Some(
            TypeAnnotation {
                name: "str" @ Span { start: 14, end: 17, line: 1, col: 15, line_end: 0, col_end: 17 },
                refinement: Some(
                    Binary {
                        left: StringLit(
                            "\"root\"",
                        ) @ Span { start: 24, end: 30, line: 1, col: 25, line_end: 0, col_end: 30 },
                        op: "/" @ Span { start: 31, end: 32, line: 1, col: 32, line_end: 0, col_end: 32 },
                        right: It @ Span { start: 33, end: 35, line: 1, col: 34, line_end: 0, col_end: 35 },
                    } @ Span { start: 24, end: 35, line: 1, col: 25, line_end: 0, col_end: 35 },
                ),
                args: [],
            },
        ),
    } @ Span { start: 14, end: 35, line: 1, col: 15, line_end: 0, col_end: 35 },
} @ Span { start: 0, end: 35, line: 1, col: 1, line_end: 0, col_end: 35 }
