crates/planarc/src/lowering/snapshots/planarc__lowering__type_decl__tests__simple_type_decl.snap
---
source: crates/planarc/src/lowering/type_decl.rs
expression: ast
---
TypeDeclaration {
    vis: Private,
    attributes: [],
    name: "UserID" @ Span { start: 5, end: 11, line: 1, col: 6, line_end: 0, col_end: 11 },
    definition: TypeDefinition {
        base_type: Some(
            TypeAnnotation {
                name: "Int" @ Span { start: 14, end: 17, line: 1, col: 15, line_end: 0, col_end: 17 },
                refinement: None,
                args: [],
            },
        ),
        fields: [],
    } @ Span { start: 14, end: 17, line: 1, col: 15, line_end: 0, col_end: 17 },
} @ Span { start: 0, end: 17, line: 1, col: 1, line_end: 0, col_end: 17 }
