crates/planarc/src/lowering/snapshots/planarc__lowering__type_decl__tests__type_decl_with_nested_refinement.snap
---
source: crates/planarc/src/lowering/type_decl.rs
expression: ast
---
TypeDeclaration {
    vis: Private,
    attributes: [],
    name: "PositiveList" @ Span { start: 5, end: 17, line: 1, col: 6, line_end: 0, col_end: 17 },
    definition: TypeDefinition {
        base_type: Some(
            TypeAnnotation {
                name: "List" @ Span { start: 20, end: 24, line: 1, col: 21, line_end: 0, col_end: 24 },
                refinement: None,
                args: [
                    TypeAnnotation {
                        name: "Int" @ Span { start: 26, end: 29, line: 1, col: 27, line_end: 0, col_end: 29 },
                        refinement: Some(
                            Binary {
                                left: Identifier(
                                    "it",
                                ) @ Span { start: 36, end: 38, line: 1, col: 37, line_end: 0, col_end: 38 },
                                op: ">" @ Span { start: 39, end: 40, line: 1, col: 40, line_end: 0, col_end: 40 },
                                right: Number(
                                    "0",
                                ) @ Span { start: 41, end: 42, line: 1, col: 42, line_end: 0, col_end: 42 },
                            } @ Span { start: 36, end: 42, line: 1, col: 37, line_end: 0, col_end: 42 },
                        ),
                        args: [],
                    } @ Span { start: 26, end: 42, line: 1, col: 27, line_end: 0, col_end: 42 },
                ],
            },
        ),
        fields: [],
    } @ Span { start: 20, end: 43, line: 1, col: 21, line_end: 0, col_end: 43 },
} @ Span { start: 0, end: 43, line: 1, col: 1, line_end: 0, col_end: 43 }
