crates/planarc/src/lowering/snapshots/planarc__lowering__type_decl__tests__type_decl_with_refinement.snap
---
source: crates/planarc/src/lowering/type_decl.rs
expression: ast
---
TypeDeclaration {
    vis: Private,
    attributes: [],
    name: "ParsableInt" @ Span { start: 5, end: 16, line: 1, col: 6, line_end: 0, col_end: 16 },
    definition: TypeDefinition {
        base_type: Some(
            TypeAnnotation {
                name: "String" @ Span { start: 19, end: 25, line: 1, col: 20, line_end: 0, col_end: 25 },
                refinement: Some(
                    Call {
                        function: Identifier(
                            "std.is_int",
                        ) @ Span { start: 32, end: 42, line: 1, col: 33, line_end: 0, col_end: 42 },
                        args: [
                            It @ Span { start: 43, end: 45, line: 1, col: 44, line_end: 0, col_end: 45 },
                        ],
                    } @ Span { start: 32, end: 45, line: 1, col: 33, line_end: 0, col_end: 45 },
                ),
                args: [],
            },
        ),
    } @ Span { start: 19, end: 45, line: 1, col: 20, line_end: 0, col_end: 45 },
} @ Span { start: 0, end: 45, line: 1, col: 1, line_end: 0, col_end: 45 }
